--- a/resources/Css/style.css
+++ b/resources/Css/style.css
@@ -52,7 +52,7 @@ table {
 
 body, html{
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
-  width: 1400px;
+  max-width: 1400px;
   margin:0 auto;
   
 }
@@ -97,7 +97,7 @@ header {
   position: fixed;
   
 }
-header img{
+.colmar-logo img{
 height: 52px;
 padding-left: 24px;
 }
@@ -408,6 +408,67 @@ border-top:1px solid #d8d8d8;
   margin-right: 24px;
 }
 
- 
- 
+
+            /* Media query */
+
+@media only screen and (min-width: 992px){
+  .mobile-header {
+    display: none;
+  }
+}
+ @media only screen  and (max-width: 992px) {
+  body {
+   max-width: 100%;
+  }
+  header>a, ul { 
+    display: none;  
+    }
+  .mobile-header {
+   display: grid;
+   grid-template-columns: repeat(4, 1fr);
+   gap: 50%;
+   padding-left: 15%;
+   height: 64px;
+   align-items: center;
+   justify-content:right;
+
+   
+   
+    
+  }
+  
+
+  .banner {
+    flex-direction: column;
+    border: 1px solid black;
+    width:fit-content;
+    
+  }
+    
+  .banner img{
+    width: 100%;
+    margin-left: 0;
+   
+  }
+  .banner-text{
+  width: 100%;
+  
+  
+ }
+ input{
+  width: 100%;
+ }
+
+  .info  img{
+    display: none;
+  }
+
+.location {
+  
+}
+
+}
+
+
+
 
